<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Team</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_username">Username : </string>
    <string name="login_password">Password : </string>
    <string name="login_error">Login Error!</string>
    <string name="login_submit">Login</string>
    <string name="login_fail">Login Fail!</string>
    <string name="pref_server">Select Server</string>
    <string name="pref_server_sum">Developing Setting</string>
    <string name="pref_servertest">Testing Server</string>
    <string name="pref_serveract">Actul Server</string>
    <string name="title_activity_settings">Settings</string>
	<string name="text_welcome">Welcome to use Team.</string>
	<string name="btn_submit">Submit</string>
	
	<string name="newteam_name">Team Name</string>
    <string name="newteam_desrc">Description</string>
    <string name="new_message">new message</string>
    <string name="message_topic">Topic</string>
    <string name="message_content">content</string>
    <string name="addmember">Add Member</string>
    <string name="newreply">New reply</string>

    <string name="notification_addToTeam">You have been added to Team : </string>
    <string name="notification_removeFromTeam">You have been removed from Team : </string>
    <string name="notification_newPost">A new post have been post in Team : </string>
    <string name="notification_newReply">A new reply on your post</string>
    <string name="notification_setAsAdmin">You have been set as Admin of Team : </string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirmAddMember">The following user will be added to Team.</string>
    <string name="listmember">Member List</string>
    <string name="delmember">Delete Member</string>
</resources>
